tests/invalidTest/typeConvert/test_uint64.q
# EXPECT type cannot be converted
def uint16 test(){
     uint64 a = 18446744073709551616
  return 0
}

